Fix menu overlap

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ nav img {
   top: -2rem;
   right: -200vh;
   height: 100vh;
-  width: 60vw;
+  width: 75vw;
   gap: 5vh;
   padding: 0;
   display: flex;
@@ -287,6 +287,7 @@ main {
   position: relative;
   box-shadow: 4px 4px 15px rgb(210,210,210);
   transition: transform 0.2s  ease;
+  z-index: -3;
 }
 
 .speech-bubble:hover {
